tests/baselines/reference/asyncFunctionDeclaration10_es2017(strict=true).errors.txt
asyncFunctionDeclaration10_es2017.ts(1,24): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncFunctionDeclaration10_es2017.ts(1,30): error TS1109: Expression expected.
asyncFunctionDeclaration10_es2017.ts(1,33): error TS7006: Parameter 'await' implicitly has an 'any' type.


==== asyncFunctionDeclaration10_es2017.ts (3 errors) ====
    async function foo(a = await => await): Promise<void> {
                           ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                                 ~~
!!! error TS1109: Expression expected.
                                    ~~~~~
!!! error TS7006: Parameter 'await' implicitly has an 'any' type.
    }